# spacewasm

./: .gitignore  .gitmodules  AI_POLICY.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.ja.md  README.md  README.zh-CN.md  REQUIREMENTS.md  SECURITY.md  bulk.patch  release-plz.toml
.github/workflows/: ci.yml  codecov.yml  comment.yml  release-plz.yml  release.yml  welcome.yml
config/: wasm_config.hpp
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: generators.rs  lib.rs  oracles.rs
crates/memory/: Cargo.toml
crates/spacewasi/: Cargo.toml  README.md  make_mvp
crates/spacewasi/scripts/: wasm2mvp.sh
crates/spacewasi/src/: main.rs  wasi_preview1.rs
crates/spacewasi/tests/: integration.rs
crates/spacewasi/tests/wasm/: argv.c  argv.wasm  argv0.wasm  dummyfile  env.c  env.wasm  fs.c  fs.wasm  hello_universe.c  hello_universe.wasm  rc.c  rc.wasm
crates/spacewasm-std/: Cargo.toml
crates/spacewasm-std/benches/: coremark.rs
crates/spacewasm-std/src/: lib.rs  main.rs
crates/spacewasm-wasi/: Cargo.toml
crates/spacewasm-wasi/src/: main.rs
crates/spacewasm_bench/: Cargo.toml  memory.x
crates/spacewasm_bench/src/: alloc.rs  bytes.rs  main.rs
crates/spacewasm_c_api/: Cargo.toml  build.rs  cbindgen.toml
crates/spacewasm_c_api/include/: config.rs  spacewasm.h
crates/spacewasm_c_api/src/: abi.rs  alloc.rs  capi.rs  config.rs  engine.rs  global_alloc.rs  host.rs  lib.rs  panic.rs  status.rs  stream.rs  tests.rs
crates/spacewasm_c_example/: Cargo.toml  README.md
crates/spacewasm_c_example/examples/: .clang-format  ctest.c  ctest_suite.c
crates/spacewasm_c_example/src/: lib.rs
crates/spacewasm_c_example/tests/: c_abi.rs  c_api.rs
crates/spacewasm_ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/spacewasm_ffi/src/: capi.rs  engine.rs  lib.rs  value.rs
crates/spacewasm_std/: Cargo.toml
crates/spacewasm_std/benches/: coremark.rs
crates/spacewasm_std/src/: main.rs
crates/spacewasm_util/: Cargo.toml
crates/spacewasm_util/src/: debug.rs  file.rs  lib.rs  trace.rs
crates/spectest/: Cargo.toml
crates/spectest/src/: lib.rs
crates/spectest/tests/: integration.rs
cxx/: buffer.cpp  module.cpp  module.hpp  string.cpp  types.hpp  values.cpp
docs/: ADVERSARIAL_TESTING.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: no_traps.rs  validate.rs
src/: SPEC.md  alloc.rs  buffer.hpp  code.rs  compiler.rs  constant.rs  engine.rs  error.rs  host.rs  imports.rs  interpreter.rs  interpreter_tests.rs  ir_reader.rs  lib.rs  main.rs  memory.rs  module.rs  opcode.rs  reader.rs  stack.rs  store.rs  stream.rs  string.hpp  text.rs  types.cpp  types.hpp  types.rs  values.hpp  vec.rs  visitor.rs
src/common/: inspector.rs  mod.rs  store.rs  visitor.rs
src/compile/: compiler.rs  mod.rs  text.rs
src/core/: code.rs  compiler.rs  compiler_tests.rs  constant.rs  error.rs  host.rs  imports.rs  ir_reader.rs  mod.rs  module.rs  reader.rs  stream.rs  text.rs  types.rs  visitor.rs
src/decode/: alloc.rs  code.rs  compiler.rs  constant.rs  error.rs  host.rs  imports.rs  index.rs  mod.rs  module.rs  opcode.rs  reader.rs  stream.rs  text.rs  types.rs  vec.rs
src/exec/: interpreter.rs  interpreter_tests.rs  ir_reader.rs  m.rs  memory.rs  mod.rs  stack.rs
src/ir/: SPEC.md  compiler.rs  compiler_tests.rs  interpreter.rs  mod.rs  reader.rs  text.rs
src/util/: alloc.rs  binary_tree.rs  box_.rs  buffer.rs  circular_buffer.rs  inner_vec.rs  mod.rs  paging.rs  rc.rs  stack.rs  stack_vec.rs  static_alloc.rs  static_vec.rs  string.rs  vec.rs
tests/: .gitattributes  custom_page_sizes_integration.rs  decode_errors_integration.rs  host_integration.rs  inspector.rs  integration.rs  multi_memory_integration.rs  regression_integration.rs  spectest.rs  statistics_integration.rs
tests/core/: binary.wast  br_table.wast  custom.wast  elem.wast  global.wast  imports.wast  linking_dev.wast  memory.wast  utf8-custom-section-id.wast  utf8-import-field.wast  utf8-import-module.wast
tests/custom-page-sizes/: custom-page-sizes-invalid.wast  custom-page-sizes.wast  memory_max.wast  memory_max_32.wast  memory_max_i64.wast
tests/decode-errors/: decode-errors.wast
tests/host/: host_funcs.wast  host_globals.wast
tests/regression/: extern_funcs.wast  extern_globals.wast  extern_globals_chained.wast  extern_memory.wast  extern_tables.wast  host_funcs.wast  host_globals.wast  start_stack_overflow.wast
tests/util/: inspector.rs  mod.rs  spectest.rs
