[workspace]

members = ["crates/*"]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Andrei Tumbar"]

[package]
name = "spacewasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[lib]
name = "spacewasm"
path = "src/lib.rs"

[features]
default = []

# Perform a bounds check on every stack access.
# This is usually not necessary since stack accesses are already checked up-front
# by the verifier. Useful for fuzzing/regression testing
strict-assertions = []

[dependencies]
libm = "0.2.16"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spacewasm = { path = ".", features = ["strict-assertions"] }

[profile.release]
opt-level = 3
lto = true
debug = "full"
strip = false
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
