[package]
name = "spacewasm_bench"

version.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# spacewasm_util = { path = "../spacewasm_util" }
spacewasm = { path = "../.." }
# embedded-alloc = "0.7.0"
spinning_top = "0.3.0"
talc = "5.0.4"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# riscv = "0.16.1"
# riscv-rt = "0.18.0"