[package]
name = "spacewasm_c_api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Reusable C-API support layer for the spacewasm interpreter"
publish = false

[lib]
name = "spacewasm_c_api"
path = "src/lib.rs"

[features]
codegen = ["dep:cbindgen"]

[dependencies]
spacewasm = { path = "../.." }

[build-dependencies]
cbindgen = { version = "0.29", optional = true }
